@@ -7,6 +7,8 @@ Revision history for Hailo
     - Word tokenizer: Improve matching/capitalization of filenames and
       domain names
 
+    - Word tokenizer: Match tabs as tokens
+
 0.68 2011-05-03 13:16:05
 
     - Speed up the learning of repetitive sentences by caching more
